force-app/main/default/objects/Lead/fields/Other_Offering_Form_tied_to_Project__c.field-meta.xml
<CustomField>
    <fullName>Other_Offering_Form_tied_to_Project__c</fullName>
    <description>If ATG Prioritized Revenue Stream = Other, than this field is dependent to capture what Offering/Platform is tied to the project</description>
    <inlineHelpText>If ATG Prioritized Revenue Stream = Other, than this field is dependent to capture what Offering/Platform is tied to the project</inlineHelpText>
    <label>Other - Offering/Form tied to Project</label>
    <type>TextArea</type>
</CustomField>