force-app/main/default/objects/Lead/fields/Partnered_with_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Partnered_with_Vendor__c</fullName>
    <description>Are we partnered with the Vendor as part of the deal?</description>
    <inlineHelpText>What are the blended rate expectations for the account?</inlineHelpText>
    <label>Partnered with Vendor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>