force-app/main/default/objects/Lead/fields/Select_Category_of_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Select_Category_of_Inquiry__c</fullName>
    <description>Mimicking the atginfo.com picklist values for &quot;Select Category of Inquiry&quot;. Validation rule will be set up to only capture leads that are = Sales/Service Inquiry</description>
    <inlineHelpText>Lead must be Sales/Service Inquiry</inlineHelpText>
    <label>Category of Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please select one</fullName>
            </value>
            <value>
                <fullName>Sales/Service Inquiry</fullName>
            </value>
            <value>
                <fullName>Careers/Employment</fullName>
            </value>
            <value>
                <fullName>Events like Quote2Cast</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>