force-app/main/default/objects/Lead/fields/Tied_to_an_RFP_Response__c.field-meta.xml
<CustomField>
    <fullName>Tied_to_an_RFP_Response__c</fullName>
    <description>Is this opportunity tied to an RFP response?</description>
    <inlineHelpText>Is this opportunity tied to an RFP response?</inlineHelpText>
    <label>Tied to an RFP Response?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>