force-app/main/default/objects/Lead/fields/Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Market__c</fullName>
    <label>Vertical Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BFS</fullName>
            </value>
            <value>
                <fullName>INSURANCE</fullName>
            </value>
            <value>
                <fullName>HEALTHCARE</fullName>
            </value>
            <value>
                <fullName>L SCIENCES</fullName>
            </value>
            <value>
                <fullName>RETAIL</fullName>
            </value>
            <value>
                <fullName>T&amp;H</fullName>
            </value>
            <value>
                <fullName>MLEU</fullName>
            </value>
            <value>
                <fullName>COMM</fullName>
            </value>
            <value>
                <fullName>TECHNOLOGY</fullName>
            </value>
            <value>
                <fullName>GVT SECTOR</fullName>
            </value>
            <value>
                <fullName>DIVERSIFIED</fullName>
            </value>
            <value>
                <fullName>INTERNAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>