force-app/main/default/objects/Lead/fields/What_are_the_Blended_rate_expectations__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_Blended_rate_expectations__c</fullName>
    <inlineHelpText>What are the blended rate expectations for the account?</inlineHelpText>
    <label>What are the Blended rate expectations?</label>
    <type>TextArea</type>
</CustomField>