force-app/main/default/objects/Lead/fields/Who_are_Cognizant_s_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Who_are_Cognizant_s_Competitors__c</fullName>
    <description>Who are Cognizant’s competitors within the account?</description>
    <inlineHelpText>Who are Cognizant’s competitors within the account?</inlineHelpText>
    <label>Who are Cognizant&apos;s Competitors?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>