force-app/main/default/objects/Lead/fields/Who_is_the_client__c.field-meta.xml
<CustomField>
    <fullName>Who_is_the_client__c</fullName>
    <description>Capture who the client Cognizants work is being done with</description>
    <label>Who is the client?</label>
    <type>TextArea</type>
</CustomField>