force-app/main/default/objects/Lead/fields/X185_onshore_and_110_offshore_accepted__c.field-meta.xml
<CustomField>
    <fullName>X185_onshore_and_110_offshore_accepted__c</fullName>
    <inlineHelpText>Would a blended rate of $185 for onshore and $110 nearshore resources be acceptable?</inlineHelpText>
    <label>185$ onshore and $110 offshore accepted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>