force-app/main/default/objects/Lead/fields/Your_Comments_Questions__c.field-meta.xml
<CustomField>
    <fullName>Your_Comments_Questions__c</fullName>
    <description>Capturing any questions or comments provided by customer who filled out contact us from on atginfo.com</description>
    <inlineHelpText>Capturing any questions or comments provided by customer who filled out contact us from on atginfo.com</inlineHelpText>
    <label>Customer Comments/Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>