force-app/main/default/objects/Lead/recordTypes/ATG_Direct.recordType-meta.xml
<RecordType>
    <fullName>ATG_Direct</fullName>
    <active>true</active>
    <businessProcess>Lead Process V1</businessProcess>
    <description>Record Type for ATG - Direct sourced leads</description>
    <label>ATG - Direct</label>
</RecordType>