force-app/main/default/objects/Lead/recordTypes/Cognizant_Co_selling.recordType-meta.xml
<RecordType>
    <fullName>Cognizant_Co_selling</fullName>
    <active>true</active>
    <businessProcess>Lead Process V1</businessProcess>
    <description>Record type for Cognizant sourced leads</description>
    <label>Cognizant - Co-selling</label>
</RecordType>