force-app/main/default/objects/Lead/listViews/Dreamforce_2017_Unconverted_Leads.listView-meta.xml
<ListView>
    <fullName>Dreamforce_2017_Unconverted_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>3/29/2018 12:00 AM</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Dreamforce 2017</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>jdesc</value>
    </filters>
    <label>Dreamforce 2017 Unconverted Leads</label>
</ListView>