force-app/main/default/objects/Lead/listViews/EMEA_Leads.listView-meta.xml
<ListView>
    <fullName>EMEA_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Source_Details__c</field>
        <operation>startsWith</operation>
        <value>EMEA</value>
    </filters>
    <label>EMEA Leads</label>
</ListView>