force-app/main/default/objects/Lead/listViews/Lead_Creation_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Creation_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Creation</label>
    <queue>Lead_Creation</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>