force-app/main/default/objects/Lead/listViews/Leads_past_Month.listView-meta.xml
<ListView>
    <fullName>Leads_past_Month</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2021 12:00 AM</value>
    </filters>
    <label>Leads past Month</label>
</ListView>