force-app/main/default/objects/Lead/listViews/Midwest_Dreamin_2018.listView-meta.xml
<ListView>
    <fullName>Midwest_Dreamin_2018</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>2018 Midwest Dreamin</value>
    </filters>
    <label>Midwest Dreamin 2018</label>
</ListView>