force-app/main/default/objects/Lead/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.TITLE</columns>
    <columns>Lead_Source_Details__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Archived</value>
    </filters>
    <filters>
        <field>Lead_Source_Details__c</field>
        <operation>contains</operation>
        <value>LinkedIn</value>
    </filters>
    <label>My LinkedIn Lead View</label>
</ListView>