force-app/main/default/objects/Lead/listViews/New_Leads_Last_2_Weeks.listView-meta.xml
<ListView>
    <fullName>New_Leads_Last_2_Weeks</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>New Leads</label>
</ListView>