force-app/main/default/objects/Lead/listViews/Newman_s_Lead_View.listView-meta.xml
<ListView>
    <fullName>Newman_s_Lead_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>5/1/2021 12:00 AM</value>
    </filters>
    <label>Newman&apos;s Lead View</label>
</ListView>