force-app/main/default/objects/Lead/listViews/Sales_and_SE_Lead_View.listView-meta.xml
<ListView>
    <fullName>Sales_and_SE_Lead_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Lead Obtained,Lead Evaluation</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2021 12:00 AM</value>
    </filters>
    <label>Sales and SE Lead View</label>
</ListView>