force-app/main/default/objects/Lead/listViews/X2018.listView-meta.xml
<ListView>
    <fullName>X2018</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Open Leads from Salesforce 2018</value>
    </filters>
    <label>2018 SF Open Partner Leads</label>
</ListView>